--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "react-hooks",
+    // "react-hooks",
     "plugin:react-hooks/recommended"
   ],
   "rules": {
